[gd_scene load_steps=7 format=3 uid="uid://dqgpk6g0igcli"]

[ext_resource type="Script" uid="uid://d4mlmx0xpwtn0" path="res://src/pokernew/hints.gd" id="1_0jn5o"]
[ext_resource type="Texture2D" uid="uid://xvtogj4lsibc" path="res://data/assets/date/art/transparent_black_rounded_rect_8px9patch.png" id="1_3pgks"]
[ext_resource type="PackedScene" uid="uid://gucvo4p4cfbc" path="res://src/pokernew/SingleHint.tscn" id="2_opv5x"]
[ext_resource type="FontFile" uid="uid://im85rm1hu4m8" path="res://data/assets/general/art/PoetsenOne-Regular.ttf" id="3_opv5x"]
[ext_resource type="Texture2D" uid="uid://ce1obowsbctjt" path="res://data/assets/realdate/star_result.png" id="5_n0xkw"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_opv5x"]
bg_color = Color(0.106708, 4.48218e-05, 0.143915, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="Hints" type="Node2D"]
script = ExtResource("1_0jn5o")
singleHint = ExtResource("2_opv5x")

[node name="BG" type="NinePatchRect" parent="."]
offset_right = 360.0
offset_bottom = 452.0
texture = ExtResource("1_3pgks")
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="HintsLabel" type="Label" parent="BG"]
layout_mode = 0
offset_right = 360.0
offset_bottom = 34.0
theme_override_fonts/font = ExtResource("3_opv5x")
theme_override_font_sizes/font_size = 28
text = "Hints"
horizontal_alignment = 1

[node name="HintContainer" type="VBoxContainer" parent="BG"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 16.0
offset_top = 38.0
offset_right = 341.0
offset_bottom = 442.0
theme_override_constants/separation = 15

[node name="HintsLocked" type="Label" parent="BG"]
unique_name_in_owner = true
layout_mode = 0
offset_top = 174.0
offset_right = 360.0
offset_bottom = 254.0
theme_override_fonts/font = ExtResource("3_opv5x")
text = "Play one game to unlock hints
(win or lose)"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="."]
offset_left = 272.0
offset_top = 7.0
offset_right = 347.0
offset_bottom = 30.0
theme_override_fonts/font = ExtResource("3_opv5x")
theme_override_font_sizes/font_size = 12
theme_override_styles/normal = SubResource("StyleBoxFlat_opv5x")
text = "Star Info"

[node name="HintDesc" type="ColorRect" parent="."]
unique_name_in_owner = true
visible = false
offset_left = 27.0
offset_top = 38.0
offset_right = 339.0
offset_bottom = 428.0
color = Color(0, 0, 0, 1)

[node name="Label" type="Label" parent="HintDesc"]
layout_mode = 0
offset_left = 113.0
offset_top = 270.0
offset_right = 302.0
offset_bottom = 382.0
theme_override_fonts/font = ExtResource("3_opv5x")
theme_override_font_sizes/font_size = 16
text = "1-star hints might be unique dialogues or a small variation of a different scene."
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Label2" type="Label" parent="HintDesc"]
layout_mode = 0
offset_left = 113.0
offset_top = 19.0
offset_right = 302.0
offset_bottom = 84.0
theme_override_fonts/font = ExtResource("3_opv5x")
theme_override_font_sizes/font_size = 16
text = "3-star hints have rewards worth replaying the scene for."
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Label3" type="Label" parent="HintDesc"]
layout_mode = 0
offset_left = 113.0
offset_top = 136.0
offset_right = 302.0
offset_bottom = 225.0
theme_override_fonts/font = ExtResource("3_opv5x")
theme_override_font_sizes/font_size = 16
text = "2-star hints may unlock a memory or wallpaper or have a small, unique side scene."
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="TextureRect" type="TextureRect" parent="HintDesc"]
layout_mode = 0
offset_left = 14.0
offset_top = 40.0
offset_right = 41.0
offset_bottom = 63.0
texture = ExtResource("5_n0xkw")
expand_mode = 1
stretch_mode = 5

[node name="TextureRect2" type="TextureRect" parent="HintDesc"]
layout_mode = 0
offset_left = 69.0
offset_top = 40.0
offset_right = 96.0
offset_bottom = 63.0
texture = ExtResource("5_n0xkw")
expand_mode = 1
stretch_mode = 5

[node name="TextureRect3" type="TextureRect" parent="HintDesc"]
layout_mode = 0
offset_left = 42.0
offset_top = 40.0
offset_right = 69.0
offset_bottom = 63.0
texture = ExtResource("5_n0xkw")
expand_mode = 1
stretch_mode = 5

[node name="TextureRect4" type="TextureRect" parent="HintDesc"]
layout_mode = 0
offset_left = 41.0
offset_top = 165.0
offset_right = 68.0
offset_bottom = 188.0
texture = ExtResource("5_n0xkw")
expand_mode = 1
stretch_mode = 5

[node name="TextureRect5" type="TextureRect" parent="HintDesc"]
layout_mode = 0
offset_left = 69.0
offset_top = 165.0
offset_right = 96.0
offset_bottom = 188.0
texture = ExtResource("5_n0xkw")
expand_mode = 1
stretch_mode = 5

[node name="TextureRect6" type="TextureRect" parent="HintDesc"]
layout_mode = 0
offset_left = 69.0
offset_top = 312.0
offset_right = 96.0
offset_bottom = 335.0
texture = ExtResource("5_n0xkw")
expand_mode = 1
stretch_mode = 5

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
